--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
                     <input type="password" name="senha" id="isenha" placeholder=" sua senha" autocomplete="current-password" required maxlength="15" minlength="7" size="">
                     <label for="isenha">Senha</label>
                 </div>
-                <input type="submit" value="Entar">
-                <a href="esqueci.html">esqueci a senha 
-                    <span class="material-symbols-outlined">mail</span>
-                </a>
+                <div class="braw">
+                    <input type="submit" value="Entar">
+                    <a href="esqueci.html">esqueci a senha
+                        <span class="material-symbols-outlined">mail</span>
+                    </a>
+                </div>
                 
-            </form>
+            </form>  
 
         </section>
     </main>
